-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 7, 8, 9
-
Component/s: client-libs
-
None
-
b38
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8084165 | emb-9 | Philip Race | P4 | Resolved | Fixed | team |
On Windows the PageRanges() attribute is not displayed. Test below :-
import javax.print.*;
import javax.print.attribute.*;
import javax.print.attribute.standard.*;
import java.awt.*;
import java.awt.print.*;
public class PRBug {
public static void main(String args[]) throws Exception {
PrinterJob job = PrinterJob.getPrinterJob();
PrintRequestAttributeSet aset = new HashPrintRequestAttributeSet();
aset.add(new PageRanges(2,3));
job.printDialog(aset);
}
}
Note that OS X has the same issue (and more) but this bug only address Windows.
For OSX we have these two bugs :-
https://bugs.openjdk.java.net/browse/JDK-8061258
https://bugs.openjdk.java.net/browse/JDK-8037969
- backported by
-
JDK-8084165 PrinterJob: Specified Page Ranges not displayed in Windows Native Print Dialog
-
- Resolved
-
- relates to
-
JDK-8067844 The print jobs only print out one page.
-
- Closed
-