8061267: PrinterJob: Specified Page Ranges not displayed in Windows Native Print Dialog

Reviewed-by: bae, jgodinez